apps/simpson/base/homer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homer
  name: homer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homer
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/ralvares/container-helper:minimal
        imagePullPolicy: Always
        name: container-helper
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /container-helper/
          name: container-helper-yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      #runtimeClassName: kata
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: homer-container-helper
        name: container-helper-yaml
