apps/simpson/base/homer-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homer
  name: homer-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: homer
