apps/simpson/base/marge-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: marge
  name: marge-service
  namespace: simpson
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: marge
