apps/simpson/base/homer-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: homer
  name: homer-web
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: homer-service
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
