apps/simpson/base/marge-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: marge
  name: marge-web
  namespace: simpson
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: marge-service
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
